 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/07/24:
   * Don't allow ToggleDecor with fullscreen windows, and make it show
     decorations for windows that don't have a titlebar by default (Mark)
     Window.cc/hh
*07/07/08:
   * Clean up state and workspace window properties on client close (Mark)
     Ewmh.cc Gnome.cc/hh
*07/07/07:
   * Don't overwrite changes to init file on reconfigure (Mark)
     Workspace.cc fluxbox.cc/hh
   * Make things work a little better with configure script's --program-prefix
     and --program-suffix options (Mark)
   * Allow negative numbers in :Workspace <int> command, which counts backwards
     from the last one (Mark)
   * Right clicking on a submenu didn't revert focus to its parent (Mark)
     FbTk/Menu.cc/hh
   * Pressing escape in a torn menu didn't work (Mark)
     FbTk/Menu.cc
   * Save workspace names when changing through menu, bug #1748967 (Mark)
     Workspace.cc Screen.cc/hh
*07/07/06:
   * When saving window information, use the class name instead of instance name
     by default (Mark)
     Remember.cc
   * Prevent apps (e.g. MPlayer) from moving/resizing just after creation if the
     position/size is saved in the apps file (Mark)
     Window.cc/hh
*07/07/03:
   * Avoid some problems with tabbed windows and resize increments (Mark)
     Window.cc WinClient.cc/hh
   * Added utility fluxbox-remote, which allows script access to most fluxbox
     commands; support must be turned on in the init file with
     session.screen<N>.allowRemoteActions; the syntax is, e.g.,
     fluxbox-remote "CustomMenu ~/.fluxbox/custommenu" (Mark)
     Screen.cc util/fluxbox-remote.cc util/Makefile.am
   * Update systemtray and KDE dockapps in slit when background changes (Mark)
     Screen.cc/hh Systemtray.cc Slit.cc FbTk/FbPixmap.cc/hh
   * Fixed resource usage due to Skype 1.4, bug #1745678 (Mark)
     FbTk/FbPixmap.cc
*07/07/02:
   * Remember original size/position in apps file for shaded or maximized
     windows (Mark)