@@ -1,5 +1,8 @@
  (Format: Year/Month/Day)
 Changes for 1.0.0:
+*07/07/31:
+   * Change _NET_WM_WINDOW_TYPE_MENU to use TINY decoration type (Mark)
+     Ewmh.cc
 *07/07/24:
    * Don't allow ToggleDecor with fullscreen windows, and make it show
      decorations for windows that don't have a titlebar by default (Mark)
